<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="raye7.com.raye7challenge.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/toolbar_title"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@id/toolbar"
            android:clickable="true"
            >

        </com.google.android.gms.maps.MapView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:background="@android:color/white"
            android:alpha="0.7"
            android:paddingBottom="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_label"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="bottom"/>
                <EditText
                    android:id="@+id/from_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/edit_text_round"
                    android:imeOptions="actionDone"
                    android:maxLines="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_label"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp"
                    android:layout_gravity="bottom"/>
                <EditText
                    android:id="@+id/to_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/edit_text_round"
                    android:imeOptions="actionDone"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:id="@+id/buttons_linear"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/button_request"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:text="@string/take_my_car"
                android:textSize="10sp"
                android:background="@drawable/button_selector"
                android:textColor="@drawable/button_color_selector"/>

            <Button
                android:id="@+id/button_send"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:text="@string/request_pickup"
                android:background="@drawable/button_selector"
                android:textSize="10sp"
                android:textColor="@drawable/button_color_selector"
                />
        </LinearLayout>
    </RelativeLayout>
    </FrameLayout>
    <ListView android:id="@+id/left_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#4c534a"/>

</android.support.v4.widget.DrawerLayout>
